[gd_scene load_steps=80 format=3 uid="uid://1hdjstkw22a7"]

[ext_resource type="PackedScene" uid="uid://b2g8tlm31pxpm" path="res://EntityComponents/Flier.tscn" id="1_3eidg"]
[ext_resource type="Script" uid="uid://nx0nm05072bl" path="res://state_machine.gd" id="1_hm4cg"]
[ext_resource type="Script" uid="uid://neu2ix13jrim" path="res://Boss/Boss1/boss1.gd" id="1_u6ci4"]
[ext_resource type="PackedScene" uid="uid://djwwpps3fxvtg" path="res://EntityComponents/GfxController.tscn" id="2_3hehl"]
[ext_resource type="PackedScene" uid="uid://upm0adhb85ik" path="res://EntityComponents/DmgDealer.tscn" id="2_ahp3q"]
[ext_resource type="Texture2D" uid="uid://e8eosyh150o6" path="res://Boss/Boss1/Gfx/boss_01_idle.png" id="3_b8ngm"]
[ext_resource type="Script" uid="uid://xlxwnlt1cbdg" path="res://Boss/Boss1/b_state_dormant.gd" id="4_ig5lj"]
[ext_resource type="Texture2D" uid="uid://cfxvsi1gjrjfd" path="res://Boss/Boss1/Gfx/boss_01_charging.png" id="4_klkqa"]
[ext_resource type="Script" uid="uid://c12eo7aw2ntud" path="res://Boss/Boss1/b_state_first_centering.gd" id="4_sjh8q"]
[ext_resource type="Script" uid="uid://bim3isgd26ysy" path="res://Boss/Boss1/b_state_chasing.gd" id="5_kiowl"]
[ext_resource type="Script" uid="uid://ot0nyvvsd3xg" path="res://Boss/Boss1/particle_group.gd" id="6_kg2o2"]
[ext_resource type="PackedScene" uid="uid://7teblr87y0tj" path="res://Boss/Boss1/Boss1DmgParticlesA.tscn" id="6_ku5wi"]
[ext_resource type="PackedScene" uid="uid://box2ff3vwcc7w" path="res://EntityComponents/DmgTaker.tscn" id="7_fd85g"]
[ext_resource type="PackedScene" uid="uid://br0niixsw8011" path="res://Boss/Boss1/Boss1DmgParticlesB.tscn" id="8_qk2p7"]
[ext_resource type="Script" uid="uid://crotnxkqpa4hi" path="res://Boss/Boss1/b_state_pre_dash.gd" id="8_rdyyk"]
[ext_resource type="Script" uid="uid://bvrpohgjbjl7d" path="res://Boss/Boss1/b_state_dashing.gd" id="9_4tlv1"]
[ext_resource type="PackedScene" uid="uid://0m2405efpgiu" path="res://Boss/Boss1/Boss1DmgParticlesC.tscn" id="9_ubj5k"]
[ext_resource type="Script" uid="uid://b6qp4ga625ob8" path="res://Boss/Boss1/b_state_post_dash.gd" id="10_iatjr"]
[ext_resource type="PackedScene" uid="uid://4eoougivo4hv" path="res://Boss/Boss1/Boss1DmgParticlesD.tscn" id="10_imdvy"]
[ext_resource type="Script" uid="uid://cp68anudf2ewj" path="res://Boss/Boss1/b_state_centering.gd" id="11_xn0th"]
[ext_resource type="Script" uid="uid://0s3fg1ur0qyh" path="res://Boss/Boss1/b_state_spin_shooting.gd" id="12_lnayk"]
[ext_resource type="PackedScene" uid="uid://cupxj14lcnr75" path="res://EntityComponents/Shooter.tscn" id="13_pyl3o"]
[ext_resource type="PackedScene" uid="uid://cgexjtuxybh5l" path="res://EntityComponents/MoveStraight.tscn" id="15_w8a43"]
[ext_resource type="Script" uid="uid://6qa3n5bja2jk" path="res://Boss/Boss1/b_state_dying.gd" id="16_axfqk"]
[ext_resource type="Script" uid="uid://dwv8kg1kwkquf" path="res://Boss/Boss1/b_state_dead.gd" id="17_4lka5"]
[ext_resource type="Script" uid="uid://c5naigmca7nny" path="res://EntityComponents/kill_foe_bullets_if_dead.gd" id="20_rjmgc"]
[ext_resource type="PackedScene" uid="uid://1votnx34efdj" path="res://EntityComponents/BWShaderSetter.tscn" id="22_6vlhg"]
[ext_resource type="PackedScene" uid="uid://br5m3o56osblx" path="res://EntityComponents/HaltWhenHeroDead.tscn" id="23_lwabm"]
[ext_resource type="PackedScene" uid="uid://4s6dlxxxx05e" path="res://EntityComponents/PlacePropWhenDead.tscn" id="25_os6h5"]
[ext_resource type="PackedScene" uid="uid://yjy1nsje8t60" path="res://EntityComponents/HideWhileHeroDead.tscn" id="31_gsuau"]

[sub_resource type="AtlasTexture" id="AtlasTexture_34igu"]
atlas = ExtResource("3_b8ngm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cm2f"]
atlas = ExtResource("3_b8ngm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8b4x"]
atlas = ExtResource("3_b8ngm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh3k6"]
atlas = ExtResource("3_b8ngm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6yks"]
atlas = ExtResource("3_b8ngm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5le0j"]
atlas = ExtResource("3_b8ngm")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehnuo"]
atlas = ExtResource("3_b8ngm")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy43f"]
atlas = ExtResource("3_b8ngm")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3auyu"]
atlas = ExtResource("3_b8ngm")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_in0ty"]
atlas = ExtResource("3_b8ngm")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tii83"]
atlas = ExtResource("3_b8ngm")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dqap"]
atlas = ExtResource("3_b8ngm")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnfo5"]
atlas = ExtResource("4_klkqa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x580f"]
atlas = ExtResource("4_klkqa")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rxrk"]
atlas = ExtResource("4_klkqa")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x0ea"]
atlas = ExtResource("4_klkqa")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3d75"]
atlas = ExtResource("4_klkqa")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaa23"]
atlas = ExtResource("4_klkqa")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o517m"]
atlas = ExtResource("4_klkqa")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_duxyv"]
atlas = ExtResource("4_klkqa")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o83i2"]
atlas = ExtResource("4_klkqa")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvt4c"]
atlas = ExtResource("4_klkqa")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q12r4"]
atlas = ExtResource("4_klkqa")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agp7w"]
atlas = ExtResource("4_klkqa")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l1ww"]
atlas = ExtResource("4_klkqa")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0gtb"]
atlas = ExtResource("4_klkqa")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3i51"]
atlas = ExtResource("4_klkqa")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_13tft"]
atlas = ExtResource("4_klkqa")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlqhl"]
atlas = ExtResource("4_klkqa")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3aoxq"]
atlas = ExtResource("4_klkqa")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3gqc"]
atlas = ExtResource("4_klkqa")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kukd"]
atlas = ExtResource("4_klkqa")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtklp"]
atlas = ExtResource("4_klkqa")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olrs7"]
atlas = ExtResource("4_klkqa")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7dvg"]
atlas = ExtResource("4_klkqa")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hsfd"]
atlas = ExtResource("4_klkqa")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3g2i"]
atlas = ExtResource("4_klkqa")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oukm8"]
atlas = ExtResource("4_klkqa")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bin3x"]
atlas = ExtResource("4_klkqa")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vfop"]
atlas = ExtResource("4_klkqa")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiolr"]
atlas = ExtResource("4_klkqa")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd4a3"]
atlas = ExtResource("4_klkqa")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3etql"]
atlas = ExtResource("4_klkqa")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnbuo"]
atlas = ExtResource("4_klkqa")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylpi"]
atlas = ExtResource("4_klkqa")
region = Rect2(640, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ymqwu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34igu")
}],
"loop": true,
"name": &"dormant",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34igu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cm2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8b4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh3k6")
}],
"loop": true,
"name": &"idle_stage0",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34igu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cm2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8b4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh3k6")
}],
"loop": true,
"name": &"idle_stage1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6yks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5le0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehnuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy43f")
}],
"loop": true,
"name": &"idle_stage2",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3auyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in0ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tii83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dqap")
}],
"loop": true,
"name": &"idle_stage3",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnfo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x580f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rxrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x0ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3d75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaa23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o517m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duxyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o83i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvt4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q12r4")
}],
"loop": false,
"name": &"pre_dash_stage0",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnfo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x580f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rxrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x0ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3d75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaa23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o517m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duxyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o83i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvt4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q12r4")
}],
"loop": false,
"name": &"pre_dash_stage1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agp7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l1ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0gtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3i51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13tft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlqhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3aoxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3gqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kukd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtklp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olrs7")
}],
"loop": false,
"name": &"pre_dash_stage2",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7dvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hsfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3g2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oukm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bin3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vfop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiolr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd4a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3etql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnbuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylpi")
}],
"loop": false,
"name": &"pre_dash_stage3",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5xncf"]
radius = 75.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2pkn"]
size = Vector2(220, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o8a3"]
size = Vector2(80, 80)

[node name="Boss1" type="Node2D" groups=["foes"]]
script = ExtResource("1_u6ci4")
metadata/name = &"CACODEMON"

[node name="GfxController" parent="." instance=ExtResource("2_3hehl")]
hide_when_dead = false
force_children_to_use_parent_material = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GfxController"]
use_parent_material = true
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ymqwu")
animation = &"dormant"
autoplay = "dormant"

[node name="BwShaderSetter" parent="GfxController" instance=ExtResource("22_6vlhg")]

[node name="ParticleGroup" type="Node2D" parent="GfxController"]
use_parent_material = true
script = ExtResource("6_kg2o2")
particle_scenes = Array[PackedScene]([ExtResource("6_ku5wi"), ExtResource("8_qk2p7"), ExtResource("9_ubj5k"), ExtResource("10_imdvy")])

[node name="DmgDealer" parent="." instance=ExtResource("2_ahp3q")]
process_mode = 4
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DmgDealer"]
position = Vector2(0, 15)
shape = SubResource("CircleShape2D_5xncf")

[node name="Flier" parent="." instance=ExtResource("1_3eidg")]
process_mode = 4
SPEED = 1000.0
ACCEL = 4000.0
DECEL = 4000.0
ACTIVATION_RADIUS = 20000.0
MIN_DIST_FROM_TARGET = 0.0
DEAD_ZONE = 0.0

[node name="MoveStraight" parent="." instance=ExtResource("15_w8a43")]
process_mode = 4
SPEED = 2000.0
ACCEL = 9000.0
DECEL = 3000.0
update_every_frame = false

[node name="Shooter" parent="." instance=ExtResource("13_pyl3o")]
process_mode = 4
position = Vector2(128, 0)
pellet_amount = 3
pellet_separation_angle = 10.0
pellet_speed = 800.0
bullet_type = 3
rotates_with_parent = true
sound_fx = &"boss1_shot"
sound_fx_volume_adjustment = -12.0
emit_signal_upon_shooting = false
time_between_shots = 0.2
shot_burst_amount = 60

[node name="DmgTaker" parent="." instance=ExtResource("7_fd85g")]
collision_mask = 16
HP_AMOUNT = 40
death_sfx = &"boss1_death"
death_sfx_volume_adjustment = -6.0
suffer_sfx = &"boss1_hurt"
suffer_sfx_volume_adjustment = -16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DmgTaker"]
shape = SubResource("RectangleShape2D_x2pkn")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1_hm4cg")
does_print = false

[node name="BStateDormant" type="Node" parent="StateMachine"]
script = ExtResource("4_ig5lj")

[node name="BStateFirstCentering" type="Node" parent="StateMachine"]
script = ExtResource("4_sjh8q")

[node name="BStateChasing" type="Node" parent="StateMachine"]
script = ExtResource("5_kiowl")

[node name="BStatePreDash" type="Node" parent="StateMachine"]
script = ExtResource("8_rdyyk")

[node name="BStateDashing" type="Node" parent="StateMachine"]
script = ExtResource("9_4tlv1")

[node name="BStatePostDash" type="Node" parent="StateMachine"]
script = ExtResource("10_iatjr")

[node name="BStateCentering" type="Node" parent="StateMachine"]
script = ExtResource("11_xn0th")

[node name="BStateSpinShooting" type="Node" parent="StateMachine"]
script = ExtResource("12_lnayk")

[node name="BStateDying" type="Node" parent="StateMachine"]
script = ExtResource("16_axfqk")

[node name="BStateDead" type="Node" parent="StateMachine"]
script = ExtResource("17_4lka5")

[node name="Timer" type="Timer" parent="StateMachine"]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4o8a3")

[node name="KillFoeBulletsIfDead" type="Node" parent="."]
script = ExtResource("20_rjmgc")

[node name="HaltWhenHeroDead" parent="." instance=ExtResource("23_lwabm")]

[node name="PlacePropWhenDead" parent="." node_paths=PackedStringArray("color_pair_source") instance=ExtResource("25_os6h5")]
prop_to_place = &"puff"
amount = 40
random_radius = 120.0
color_pair_source = NodePath("../GfxController/BwShaderSetter")
lazy_evaluate_color_pair = true

[node name="HideWhileHeroDead" parent="." instance=ExtResource("31_gsuau")]
